tests/snapshots/integration__integration_tests__merge__merge_no_squash.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--no-squash"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpZ1mZNK/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mMerging 2 commits to [1m[36mmain[0m @ [2m[SHA][0m (no commit/squash/rebase needed)

* [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m feat: add file 2
* [SHA] feat: add file 1

 file1.txt | 1 [32m+[m
 file2.txt | 1 [32m+[m
 2 files changed, 2 insertions(+)

✅ [32mMerged to [1m[32mmain[0m[0m (2 commits, 2 files, [32m+2[0m)
🔄 [36mCleaning up worktree...[0m
✅ [32mReturned to primary at [1m[32m[REPO][0m[0m

----- stderr -----
